--- a/.github/workflows/pcb-artifacts.yaml
+++ b/.github/workflows/pcb-artifacts.yaml
@@ -3,13 +3,13 @@ name: pcb-artifacts
 on:
   push:
     paths:
-    - 'OemRFM69_USB/PCB/**.kicad_sch'
-    - 'OemRFM69_USB/PCB/**.kicad_pcb'
+    - 'OeMRFM69_USB/PCB/**.kicad_sch'
+    - 'OeMRFM69_USB/PCB/**.kicad_pcb'
     - '.github/workflows/pcb-artifacts.yaml'
   pull_request:
     paths:
-    - 'OemRFM69_USB/PCB/**.kicad_sch'
-    - 'OemRFM69_USB/PCB/**.kicad_pcb'
+    - 'OeMRFM69_USB/PCB/**.kicad_sch'
+    - 'OeMRFM69_USB/PCB/**.kicad_pcb'
     - '.github/workflows/pcb-artifacts.yaml'
   workflow_dispatch:
 
@@ -42,43 +42,43 @@ jobs:
       run: |
         export DDDD=$(date)
         echo "DDDD = ${DDDD}"
-        sed -i "s!<<date>>!${DDDD}!" OemRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
+        sed -i "s!<<date>>!${DDDD}!" OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
   
     - name: Update the PCBs with on default branch with git hash
       if: steps.branch-name.outputs.is_default == 'true'
       run: |
         export COMMIT=$(git rev-parse --short HEAD)
         echo "COMMIT = ${COMMIT}"
-        sed -i "s!<<hash>>!${COMMIT}!" OemRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
+        sed -i "s!<<hash>>!${COMMIT}!" OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
 
     - name: Update the PCBs with the git hash and BETA.
       if: steps.branch-name.outputs.is_default != 'true'
       run: |
         export COMMIT=$(git rev-parse --short HEAD)
         echo "COMMIT = ${COMMIT}"
-        sed -i "s!<<hash>>!BETA-${COMMIT}!" OemRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
+        sed -i "s!<<hash>>!BETA-${COMMIT}!" OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
 
     - name: Remove existing export folder
       run: |
-        rm -rf ./OemRFM69_USB/PCB/export/
+        rm -rf ./OeMRFM69_USB/PCB/export/
 
     - name: Run KiBot
       uses: INTI-CMNB/KiBot@v2_k7
       with:
-        config: ./OemRFM69_USB/PCB/config-2layer.kibot.yaml
+        config: ./OeMRFM69_USB/PCB/config-2layer.kibot.yaml
         dir: ./ModuleV490-PassiveBal/export
-        schema: './OemRFM69_USB/PCB/OeMRFM69_USB.kicad_sch'
-        board: './OemRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb'
+        schema: './OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_sch'
+        board: './OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb'
 
     # Splitting this out to ensure a failed kibot run will mark a check as failed.
     - name: Prepare Gerbers artifact
       run: |
-        cd ./OemRFM69_USB/PCB/export/gerbers
+        cd ./OeMRFM69_USB/PCB/export/gerbers
         zip -r -j ../OeMRFM69_USB_gerbers.zip *        
 
     - name: Remove gerber folder
       run: |
-        rm -rf ./OemRFM69_USB/PCB/export/gerbers
+        rm -rf ./OeMRFM69_USB/PCB/export/gerbers
   
     - name: upload artifacts
       uses: actions/upload-artifact@v3
@@ -86,4 +86,4 @@ jobs:
       with:
         name: OeMRFM69_USB_gerbers
         path: |
-          ./OemRFM69_USB/PCB/export/OeMRFM69_USB_gerbers.zip
+          ./OeMRFM69_USB/PCB/export/OeMRFM69_USB_gerbers.zip
