--- a/.github/workflows/pcb-artifacts.yaml
+++ b/.github/workflows/pcb-artifacts.yaml
@@ -37,26 +37,27 @@ jobs:
     - name: Running on branch
       run: |
         echo "Running on branch: ${{ steps.branch-name.outputs.current_branch }}"
-  
+        ls -R
+
     - name: Date PCB
       run: |
         export DDDD=$(date)
         echo "DDDD = ${DDDD}"
-        sed -i "s!<<date>>!${DDDD}!" OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
+        sed -i "s!<<date>>!${DDDD}!" ./OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
   
-    - name: Update the PCBs with on default branch with git hash
+    - name: Update the PCBs on default branch with git hash
       if: steps.branch-name.outputs.is_default == 'true'
       run: |
         export COMMIT=$(git rev-parse --short HEAD)
         echo "COMMIT = ${COMMIT}"
-        sed -i "s!<<hash>>!${COMMIT}!" OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
+        sed -i "s!<<hash>>!${COMMIT}!" ./OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
 
     - name: Update the PCBs with the git hash and BETA.
       if: steps.branch-name.outputs.is_default != 'true'
       run: |
         export COMMIT=$(git rev-parse --short HEAD)
         echo "COMMIT = ${COMMIT}"
-        sed -i "s!<<hash>>!BETA-${COMMIT}!" OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
+        sed -i "s!<<hash>>!BETA-${COMMIT}!" ./OeMRFM69_USB/PCB/OeMRFM69_USB.kicad_pcb
 
     - name: Remove existing export folder
       run: |
@@ -79,7 +80,8 @@ jobs:
     - name: Remove gerber folder
       run: |
         rm -rf ./OeMRFM69_USB/PCB/export/gerbers
-  
+        ls -R
+
     - name: upload artifacts
       uses: actions/upload-artifact@v3
       if: steps.branch-name.outputs.is_default != 'true'
