--- a/.github/workflows/pcb-artifacts.yaml
+++ b/.github/workflows/pcb-artifacts.yaml
@@ -72,20 +72,26 @@ jobs:
         board: './PCB/OeMRFM69_USB.kicad_pcb'
 
     # Splitting this out to ensure a failed kibot run will mark a check as failed.
-    - name: Prepare Gerbers artifact
+    - name: Prepare artifact 1
       run: |
         cd ./PCB/export/gerbers
-        zip -r -j ../OeMRFM69_USB_gerbers.zip *        
+        zip -r -j ../OeMRFM69_USB_gerbers.zip *
 
     - name: Remove gerber folder
       run: |
         rm -rf ./PCB/export/gerbers
         ls -R
 
-    - name: upload artifacts
+    - name: upload artifacts - gerbers
       uses: actions/upload-artifact@v3
-      if: steps.branch-name.outputs.is_default != 'true'
       with:
         name: OeMRFM69_USB_gerbers
         path: |
           ./PCB/export/OeMRFM69_USB_gerbers.zip
+
+    - name: upload artifacts 2
+      uses: actions/upload-artifact@v3
+      with:
+        name: OeMRFM69_USB_Artifacts
+        path: |
+          ./PCB/export/
